# Case_Study-ASTD_Patterns-

./: DetectionPattern.eastd  DetectionPattern.json  README.md  combineModels.eastd  combineModels.json
generatedCode/: CMakeLists.txt  Code.cpp  README.md  combineModels.eastd  combineModels.json  combinemodels.cpp  detectionpattern.cpp  helper.h
generatedCode/inputs/: detector_parameters.json  window_parameters.json
generatedCode/learning_models/: main.cpp  model.h
generatedCode/learning_models/KDE/: kde.cpp  kde.h
generatedCode/learning_models/KMEANS/: kmeans.cpp  kmeans.h
generatedCode/learning_models/LOF/: lof.cpp  lof.h
generatedCode/python_code/: LOF.py  pyKmeans.py  vonMises.py
generatedCode/traces/: astd3559trace.txt
generatedCode/window/: window.cpp  window.h
